<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:id="@+id/tTitulo"
            android:text="Inventario"
            android:textSize="50dp"
            android:padding="11dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
          >

        <TextView
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/NombreInventario"
               />
        <EditText
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:hint="Osito cariñosito"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >

        <TextView
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/idinventario"
        />
        <EditText
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:hint="232"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
    >

        <TextView
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/cantidadInventario"
        />
        <EditText
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:hint="Agotado"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
    >

        <TextView
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/precioinventario"
        />
        <EditText
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:hint="232"/>
    </LinearLayout>

</LinearLayout>
